<resources>
    <string name="ok">OK</string>
    <string name="clear">Очистить</string>
    <string name="username">Имя пользователя</string>
    <string name="email">Электронная почта</string>
    <string name="blank"></string>
    <string name="app_name">ПОДПИСКА</string>
    <string name="not_subscribed">Подписка не оформлена.</string>
    <string name="subscribed">Подписка оформлена на %s %nпо почте %s.</string>
</resources>