<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/outputText"
                android:layout_width="349dp"
                android:layout_height="72dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="540dp"
                android:layout_marginEnd="19dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="154dp"
                android:layout_height="0dp"
                android:layout_marginTop="162dp"
                android:layout_marginBottom="103dp"
                android:text="@string/username"
                app:layout_constraintBottom_toTopOf="@+id/textViewEmail"
                app:layout_constraintStart_toStartOf="@+id/inputTextName"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputTextName"
                android:layout_width="361dp"
                android:layout_height="72dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="204dp"
                android:layout_marginEnd="19dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/blank"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputTextEmail"
                android:layout_width="361dp"
                android:layout_height="72dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="336dp"
                android:layout_marginEnd="19dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/blank"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="152dp"
                android:layout_height="0dp"
                android:layout_marginEnd="20dp"
                android:text="@string/clear"
                app:layout_constraintBottom_toBottomOf="@+id/buttonOK"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonOK"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="154dp"
                android:layout_height="0dp"
                android:layout_marginStart="23dp"
                android:layout_marginBottom="406dp"
                android:text="@string/email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewName" />

            <Button
                android:id="@+id/buttonOK"
                android:layout_width="168dp"
                android:layout_height="49dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:text="@string/ok"
                app:layout_constraintEnd_toStartOf="@+id/buttonClear"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputTextEmail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>